[package]
name = "logic_management_tutorial"
version = "0.1.0"
edition = "2021"
# default-run = "main"

# Android build cmd: cargo apk run --release --lib -p logic_management_tutorial

# TODO figure out the correct setup here, why does the bevy android example use this approach
 # [lib]
 # crate-type = ["staticlib", "cdylib"]

# [[bin]]
# name = "main"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/bevy_dylib",
]

default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/serialize",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/filesystem_watcher",
    "bevy/tonemapping_luts"
]

[dependencies]
bevy = { version = "0.11", default-features = false }
rand = "0.8.5"
pathfinding = "4.3.0"
futures-lite = "*"
num = "*"

[package.metadata.android]
apk_name = "management game"
app_name = "management game"
assets = "assets"
resources = ["assets/android-res"]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Bevy Example"

[package.metadata.android.signing.release]
path = "/home/matthew/Tools/android/cmdline-tools/bin/my-release-key.keystore"
keystore_password = "android"
